# Stockquotes-HID

./: stockquotes.cabal
app/: Charts.hs  HtmlReport.hs  Params.hs  QuoteData.hs  StatReport.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
