cabal-version:      2.4
name:               stockquotes
version:            0.1.0.0
synopsis:           Stockquotes processes historical stock quotes data.
extra-source-files: CHANGELOG.md

executable stockquotes
    main-is:          Main.hs
    other-modules:    Params QuoteData StatReport Charts HtmlReport
    build-depends:    base ^>=4.14.3.0
                    , text >=1.2 && <1.3
                    , bytestring >=0.10 && <0.11
                    , time >=1.8 && <1.11
                    , fmt >=0.5 && <0.7
                    , colonnade >=1.1 && <1.3
                    , blaze-html >=0.9 && <0.10
                    , blaze-colonnade >=1.1 && <1.3
                    , Chart >=1.8 && <1.10
                    , Chart-diagrams >=1.8 && <1.10
                    , cassava >=0.5 && <0.6
                    , optparse-applicative >=0.14 && <0.16
    hs-source-dirs:   app
    default-language: Haskell2010
